[package]
name = "svgize"
version = "0.1.0"
edition = "2021"
authors = ["Charles Dong <charlesdong_2000@outlook.com>"]
readme = "./README.md"
repository = "https://github.com/chardon55/svgize.git"
homepage = "https://github.com/chardon55/svgize"
license = "MIT OR Apache-2.0"
description = "Advanced SVG serialization library"

[dependencies]
quick-xml = { version = "0.31", default-features = false }

[features]
default = ["attr-core", "attr-styling", "attr-presentation", "attr-event"]

attr-core = []
attr-styling = []
attr-event = []
attr-presentation = []
attr-cond_proc = []

crossorigin = []

# Experimental standard 
exp = []

